[package]
name = "proxy-router"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.37.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.15"
anyhow = "1.0.86"
thiserror = "1.0.61"
url = "2.5.0"
fast-socks5 = { version = "0.9.6", git = "https://github.com/m4w1s/fast-socks5", tag = "v0.9.6-command" }
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"] }
derive_builder = "0.20.0"
log = "0.4.21"

[dev-dependencies]
env_logger = "0.11.3"
