[package]
name = "proxy-router"
version = "0.2.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["rt"] }
thiserror = "2.0.17"
url = "2.5.7"
fast-socks5 = "1.0.0-rc.0"
async-http-proxy = { version = "1.2.5", features = ["runtime-tokio", "basic-auth"] }
derive_builder = "0.20.2"
log = "0.4.28"
